# Python08_git

ex0/: construct.py
ex1/: loading.py  pyproject.toml  requirents.txt
ex2/: .env.example  oracle.py
