[tool.poetry]
name = "matrix-analysis"
version = "1.0.0"
description = "Matrix data analysis demo comparing pip and Poetry"
authors = ["dioppolo"]

[tool.poetry.dependencies]
pandas = "^2.3.3"
numpy = "^1.26.4"
matplotlib = "^3.5.1"
requests = "^2.34.2"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"