[tool.poetry]
name = "matrix_analysis"
version = "1.0.0"
package-mode = false
description = "Matrix data analysis demo comparing pip and Poetry"
authors = ["dioppolo"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2"
numpy = "^1.26"
matplotlib = "^3.8"
requests = "^2.31"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"